fix: fix ratelimit

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
+NUXT_AUTH_CONNECTION_STRING=
 NUXT_AUTH_USER_TABLE_NAME=users
 NUXT_AUTH_SESSION_TABLE_NAME=sessions
 NUXT_AUTH_MFA_TABLE_NAME=mfa
-NUXT_AUTH_CONNECTION_STRING=
+
+
 NUXT_DEFAULT_USER_ROLE=user
 NUXT_MAX_FAILED_ATTEMPTS=5
+
+# In minutes
+NUXT_OTP_EXPIRY=15
+
+# Rate limit
+# Number of requests
+NUXT_RATE_LIMIT=100
+# Window in seconds
+NUXT_RATE_LIMIT_WINDOW=60
+
+# Session in minutes
 NUXT_SESSION_REFRESH_INTERVAL=720
 NUXT_SESSION_TOTAL_DURATION=43200
 NUXT_SESSION_EXTENSION_DURATION=10080
